--- a/src/Pages/About.css
+++ b/src/Pages/About.css
@@ -1,6 +1,7 @@
 .aboutSection {
   padding: 80px 20px;
-  background: linear-gradient(to right, #e3f2fd, #ffffff);}
+background: linear-gradient(to right, #000000, #8B0000);
+}
 .sectionTitle {
   font-size: 32px;
   font-weight: 700;
@@ -9,7 +10,7 @@
   color: #222;
 }
 .aboutCard.singleCard {
-  background: #fff;
+  background: black;
   border-radius: 16px;
   padding: 30px;
   max-width: 900px;
@@ -23,5 +24,5 @@
 .aboutCard p {
   font-size: 16px;
   line-height: 1.8;
-  color: #444;
+  color:#8B0000;
 }
