--- a/src/Pages/Landing.css
+++ b/src/Pages/Landing.css
@@ -1,5 +1,5 @@
 .hero {
-  background: linear-gradient(to right, #e3f2fd, #ffffff);
+background: linear-gradient(to right, #000000, #8B0000);
   padding: 100px 20px 60px 20px;
   text-align: center;
 }
@@ -14,7 +14,7 @@
   margin-bottom: 10px;
 }
 .heroName {
-  color: #007bff;
+  color: white;
   font-weight: 800;
 }
 .bannerSubtitle {
@@ -38,8 +38,8 @@
   flex-wrap: wrap;
 }
 .primaryButton {
-  background-color: #007bff;
-  color: white;
+  background-color: black;
+  color:#8B0000;
   font-weight: 500;
   text-decoration: none;
   padding: 12px 24px;
@@ -48,13 +48,13 @@
   display: inline-block;
 }
 .primaryButton:hover {
-  background-color: #0056b3;
+  background-color:black;
   transform: translateY(-2px);
 }
 .resumeButton {
   padding: 12px 24px;
-  background-color: #4caf50;
-  color: white;
+  background-color: black;
+  color: #8B0000;
   text-decoration: none;
   border-radius: 8px;
   font-weight: bold;
