--- a/src/Pages/Project.css
+++ b/src/Pages/Project.css
@@ -1,6 +1,6 @@
 .Projects {
   padding: 60px 20px;
-  background: linear-gradient(to right, #e3f2fd, #ffffff);
+background: linear-gradient(to right, #000000, #8B0000);
 }
 .sectionTitle {
   font-size: 36px;
@@ -16,7 +16,7 @@
   gap: 30px;
 }
 .ProjectCard {
-  background-color: #fff;
+  background-color: black;
   border-radius: 12px;
   overflow: hidden; 
   box-shadow: 0 6px 20px rgba(0, 0, 0, 0.08);
@@ -50,6 +50,6 @@
   font-size: 20px;
   font-weight: 600;
   margin-bottom: 10px;
-  color: #333;
+  color:#8B0000;
 }
 
